# aiogram-fsm-sqlitestorage

./: .editorconfig  .gitignore  .mypy.ini  .pre-commit-config.yaml  .releaserc.json  .ruff.toml  CHANGELOG.md  Makefile  README.md  codecov.yaml  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt
.github/workflows/: develop.yml  pr-title.yml  pre-commit.yml  release.yml
aiogram_fsm_sqlitestorage/: __init__.py
examples/: example.py
sqlitestorage/: __init__.py  storage.py
tests/: conftest.py  mocked_bot.py  test_key_builder.py  test_storage.py
